--- a/index.html
+++ b/index.html
@@ -30,19 +30,34 @@
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="#">
                 <img src="assets/collabo_logo.jpeg" width="30" height="30" class="d-inline-block align-center" alt="collaborations logo"><b class="logoName">
-                Collaborations...</b></a> 
+                Collaborations...</b></a>
 
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
-                      <a class="nav-link active" href="index.html">Home</a>
+                        <a class="nav-link disabled" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="my_page.php">My Page</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="Login.php">Sign Out</a>
+                        <a class="nav-link" href="team_page.php">Team Page</a>
                     </li>
-                  </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pBacklog.php">Product Backlog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sprint Planning</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Daily Sprint</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Retrospective.php">Sprint Retrospective</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Chat.php">Chat</a>
+                    </li>
+                </ul>
             </nav>
         </header>
 
