All files updated

--- a/sign_up index.html
+++ b/sign_up index.html
@@ -65,7 +65,7 @@
                             <label for="teamName">Team Name</label><br>
                             <input type="text" id="TeamName" name="teamName" required><br>
                             <label for="email1">Group Member Email:</label><br>
-                            <input type="email" id="email1" name="email1" placeholder="@rgu.ac.uk" pattern=".+@rgu.ac.uk" required><br>
+                            <input type="email" id="email1" name="email1" placeholder="@rgu.ac.uk" pattern=".+@rgu.ac.uk"><br>
                             <label for="email2">Group Member Email:</label><br>
                             <input type="email" id="email2" name="email2" placeholder="@rgu.ac.uk" pattern=".+@rgu.ac.uk" ><br>
                             <label for="email3">Group Member Email:</label><br>
